# Leopold

./: Agent.cpp  Agent.hpp  CMakeLists.txt  Card.hpp  LICENSE  Manille.cpp  Manille.hpp  State.cpp  State.hpp
.github/workflows/: cmake-multi-platform.yml
tests/: AgentTests.cpp  CardTests.cpp  ManilleTests.cpp  StateTests.cpp
